load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "configurer.go",
        "disk.go",
        "filecompute.go",
        "noop.go",
        "watch.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//common/buildinfo",
        "//common/logger",
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//rule",
    ],
)

go_test(
    name = "cache_test",
    srcs = [
        "disk_test.go",
        "filecompute_test.go",
        "watch_test.go",
    ],
    embed = [":cache"],
    deps = ["@gazelle//config"],
)
