load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rule",
    srcs = [
        "attr.go",
        "glob.go",
        "rules.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/rule",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logger",
        "@bazel_gazelle//label",
        "@bazel_gazelle//language",
        "@bazel_gazelle//rule",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@com_github_emirpasic_gods_v2//sets/treeset",
    ],
)

go_test(
    name = "rule_test",
    srcs = ["glob_test.go"],
    embed = [":rule"],
    deps = [
        "@com_github_bazelbuild_buildtools//build",
    ],
)
