load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "treesitter",
    srcs = [
        "filters.go",
        "parser.go",
        "queries.go",
        "query.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/treesitter",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/logger",
        "@com_github_tree_sitter_go_tree_sitter//:go-tree-sitter",
    ],
)

go_test(
    name = "treesitter_test",
    srcs = ["filters_test.go"],
    deps = [
        ":treesitter",
        "//common/treesitter/grammars/golang",
    ],
)
