load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "treesitter",
    srcs = [
        "parser.go",
        "queries.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/common/treesitter",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logger",
        "@com_github_odvcencio_gotreesitter//:gotreesitter",
    ],
)

go_test(
    name = "treesitter_test",
    srcs = ["filters_test.go"],
    deps = [
        ":treesitter",
        "//common/treesitter/grammars/golang",
    ],
)
