load("@rules_go//go:def.bzl", "go_library", "go_test")

alias(
    name = "gazelle",
    actual = "//tools/gazelle",
)

# Target name matching MODULE name
alias(
    name = "aspect_gazelle_js",
    actual = ":js",
    visibility = ["//visibility:public"],
)

go_library(
    name = "js",
    srcs = [
        "config.go",
        "configure.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "language.go",
        "resolve.go",
        "target.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/language/js",
    visibility = ["//visibility:public"],
    deps = [
        "//node",
        "//parser",
        "//pnpm",
        "//proto",
        "//typescript",
        "@com_github_aspect_build_aspect_gazelle_common//:common",
        "@com_github_aspect_build_aspect_gazelle_common//cache",
        "@com_github_aspect_build_aspect_gazelle_common//logger",
        "@com_github_aspect_build_aspect_gazelle_common//rule",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_emirpasic_gods_v2//sets/treeset",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_test(
    name = "js_test",
    srcs = [
        "config_test.go",
        "generate_test.go",
        "resolve_test.go",
    ],
    embed = [":js"],
    deps = ["@gazelle//rule"],
)
