load("@rules_go//go:def.bzl", "go_library", "go_test")

# common is a go_deps module; resolve it explicitly so gazelle's lazy index does
# not shell out to `go` (which can't resolve common's placeholder treesitter dep).
# gazelle:resolve go github.com/aspect-build/aspect-gazelle/common @com_github_aspect_build_aspect_gazelle_common//:common
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/common/(.*) @com_github_aspect_build_aspect_gazelle_common//$1

# gazelle:resolve_regexp go github.com/bazel-contrib/rules_jvm/(.*) @contrib_rules_jvm//$1

alias(
    name = "gazelle",
    actual = "//tools/gazelle",
)

# Target name matching MODULE name
alias(
    name = "aspect_gazelle_kotlin",
    actual = ":kotlin",
    visibility = ["//visibility:public"],
)

go_library(
    name = "kotlin",
    srcs = [
        "configure.go",
        "generate.go",
        "imports.go",
        "kotlin.go",
        "language.go",
        "resolver.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/language/kotlin",
    visibility = ["//visibility:public"],
    deps = [
        "//kotlinconfig",
        "//parser",
        "@com_github_aspect_build_aspect_gazelle_common//:common",
        "@com_github_aspect_build_aspect_gazelle_common//logger",
        "@com_github_aspect_build_aspect_gazelle_common//rule",
        "@com_github_emirpasic_gods_v2//maps/treemap",
        "@com_github_emirpasic_gods_v2//sets/treeset",
        "@com_github_rs_zerolog//:zerolog",
        "@contrib_rules_jvm//java/gazelle/javaconfig",
        "@contrib_rules_jvm//java/gazelle/private/java",
        "@contrib_rules_jvm//java/gazelle/private/maven",
        "@contrib_rules_jvm//java/gazelle/private/types",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_test(
    name = "kotlin_test",
    srcs = ["kotlin_test.go"],
    embed = [":kotlin"],
)
