module(
    name = "aspect_gazelle_kotlin",
    compatibility_level = 0,
)

bazel_dep(name = "aspect_gazelle", version = "0.0.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")  # must match go.mod
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")  # must match go.mod

# Go modules
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_emirpasic_gods_v2", "com_github_rs_zerolog")

####### Dev dependencies ########

# Always use the local @aspect_gazelle
local_path_override(
    module_name = "aspect_gazelle",
    path = "../../",
)

# Go module patching. Dev only and must be done manually if this MODULE is consumed elsewhere.
go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps_dev.module_override(
    patch_strip = 1,
    patches = [
        "@aspect_gazelle//common/patches:go-tree-sitter-bazel.patch",
        "@aspect_gazelle//common/patches:go-tree-sitter-tree_sitter.patch",
    ],
    path = "github.com/tree-sitter/go-tree-sitter",
)

# Go SDK version which can only be defined in a root MODULE
go_sdk2 = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk2.nogo(nogo = "@aspect_gazelle//bazel/go:nogo")
go_sdk2.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
