module(
    name = "aspect_gazelle_kotlin",
    compatibility_level = 0,
)

bazel_dep(name = "aspect_treesitter_grammars", version = "0.0.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.1")  # must match go.mod
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")  # must match go.mod

# Go modules
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_aspect_build_aspect_gazelle_common", "com_github_emirpasic_gods_v2", "com_github_rs_zerolog")

####### Dev dependencies ########

local_path_override(
    module_name = "aspect_treesitter_grammars",
    path = "../../treesitter",
)

# Go SDK version which can only be defined in a root MODULE
go_sdk2 = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk2.nogo(nogo = "@com_github_aspect_build_aspect_gazelle_common//bazel/go:nogo")
go_sdk2.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
