load("@rules_go//go:def.bzl", "go_library")

# common is a go_deps module; resolve it explicitly so gazelle's lazy index does
# not shell out to `go` (which can't resolve common's placeholder treesitter dep).
# gazelle:resolve go github.com/aspect-build/aspect-gazelle/common @com_github_aspect_build_aspect_gazelle_common//:common
# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/common/(.*) @com_github_aspect_build_aspect_gazelle_common//$1

alias(
    name = "gazelle",
    actual = "//tools/gazelle",
)

# Target name matching MODULE name
alias(
    name = "aspect_gazelle_orion",
    actual = ":orion",
    visibility = ["//visibility:public"],
)

go_library(
    name = "orion",
    srcs = [
        "builtin.go",
        "config.go",
        "configure.go",
        "generate.go",
        "host.go",
        "resolver.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/language/orion",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin",
        "//queries",
        "//starzelle",
        "@com_github_aspect_build_aspect_gazelle_common//:common",
        "@com_github_aspect_build_aspect_gazelle_common//bazel/workspace",
        "@com_github_aspect_build_aspect_gazelle_common//cache",
        "@com_github_aspect_build_aspect_gazelle_common//logger",
        "@com_github_aspect_build_aspect_gazelle_common//rule",
        "@com_github_emirpasic_gods_v2//sets/treeset",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@org_golang_x_sync//errgroup",
    ],
)
