load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "progress",
    srcs = ["progress.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/runner/progress",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_bazel_gazelle//config",
        "@com_github_bazelbuild_bazel_gazelle//label",
        "@com_github_bazelbuild_bazel_gazelle//language",
        "@com_github_bazelbuild_bazel_gazelle//repo",
        "@com_github_bazelbuild_bazel_gazelle//resolve",
        "@com_github_bazelbuild_bazel_gazelle//rule",
        "@org_golang_x_term//:term",
    ],
)
