load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "java",
    srcs = [
        "binding.go",
        "@tree-sitter-java//:srcs",
    ],
    cgo = True,
    copts = ["-Iexternal/*tree-sitter-java"],
    importpath = "github.com/aspect-build/aspect-gazelle/treesitter/java",
    visibility = ["//visibility:public"],
)
