load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "json",
    srcs = [
        "binding.go",
        "@tree-sitter-json//:srcs",
    ],
    cgo = True,
    copts = ["-Iexternal/*tree-sitter-json"],
    importpath = "github.com/aspect-build/aspect-gazelle/treesitter/json",
    visibility = ["//visibility:public"],
    deps = ["@com_github_smacker_go_tree_sitter//:go-tree-sitter"],
)
