load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "kotlin",
    srcs = [
        "binding.go",
        "@tree-sitter-kotlin//:srcs",  #keep
    ],
    cgo = True,
    copts = ["-Iexternal/*tree-sitter-kotlin"],  #keep
    importpath = "github.com/aspect-build/aspect-gazelle/treesitter/kotlin",
    visibility = ["//visibility:public"],
    deps = ["@com_github_smacker_go_tree_sitter//:go-tree-sitter"],
)
