load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "python",
    srcs = ["binding.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/treesitter/python",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_odvcencio_gotreesitter//:gotreesitter",
        "@com_github_odvcencio_gotreesitter//grammars",
    ],
)
